--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ header {
     text-align: center;
 }
 
+main {
+    display: flex;
+}
+
 .sidebar {
     border: 1px solid black;
     width: 20%;
@@ -10,6 +14,7 @@ header {
 
 .content {
     width: 80%;
+    border: 1px solid black;
 }
 
 footer {
