--- a/style.css
+++ b/style.css
@@ -64,10 +64,11 @@ ul {
 
 .band-info {
     background-color: #292828;
-    border: 3px solid gray;
     border-radius: 10px;
     padding: 20px;
-    margin: 5px;
+    margin: 10px 5px;
+    margin-bottom: 40px;
+
 }
 
 .band-name {
