header styling adjustments

--- a/style.css
+++ b/style.css
@@ -15,11 +15,12 @@ body {
 /*header*/
 header {
     text-align: center;
-    background-color: #e63946;
+    background-image: linear-gradient(77deg, darkred,#e63946);
     position: static;
     padding: 30px;
-    color: #f1f1f1;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    border-radius: 0 0 10px 10px;
+    color:#2a0000;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 30px;
 }
 
